@@ -8,6 +8,7 @@ Panels 6.x-dev
 Rearrange the pane dropdown menus to be better organized and look a little nicer.
 Add a new field to allow setting a panel title from one of its panes.
 #562560 by Damien McKenna: Integration with export.module
+#583172 by jacine: Turn panel pane into a template, as it always should have been.
 
 Panels 6.x-3.0
 ==============
